[gd_scene load_steps=8 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://updateBar.gd" type="Script" id=2]
[ext_resource path="res://assets/light3.fw.png" type="Texture" id=3]
[ext_resource path="res://assets/NPC3.fw.png" type="Texture" id=4]
[ext_resource path="res://gameMenu.gd" type="Script" id=5]
[ext_resource path="res://invMenu.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 22.3534

[node name="player" type="Node"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

editor/display_folded = true
visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -0.464844
margin/top = -0.446667
margin/right = -0.308594
margin/bottom = -0.321667
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0363636
margin/top = 0.0740741
margin/right = 0.721212
margin/bottom = 0.962963
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player" type="KinematicBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 1 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Light2D" type="Light2D" parent="player"]

enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
scale = 30.0
color = Color( 0.972656, 0.846206, 0.74469, 1 )
energy = 0.7
mode = 3
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="Sprite" type="Sprite" parent="player"]

transform/scale = Vector2( 0.76, 0.76 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="player"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 10.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]

transform/pos = Vector2( 0, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="gameMenu" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.75
visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -0.0644531
margin/top = -0.085
margin/right = 0.0644531
margin/bottom = 0.085
script/script = ExtResource( 5 )

[node name="resumeButton" type="Button" parent="gameMenu"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.251908
margin/top = 0.0980392
margin/right = 0.755725
margin/bottom = 0.294118
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="exitButton" type="Button" parent="gameMenu"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.251908
margin/top = 0.686275
margin/right = 0.755725
margin/bottom = 0.882353
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="controlsButton" type="Button" parent="gameMenu"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.251908
margin/top = 0.392157
margin/right = 0.755725
margin/bottom = 0.588235
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Controls"
flat = false

[node name="controlsPanel" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -0.146484
margin/top = -0.17
margin/right = 0.146484
margin/bottom = 0.17

[node name="Label" type="Label" parent="controlsPanel"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.414716
margin/top = 0.0245098
margin/right = 0.591973
margin/bottom = 0.176471
text = "Controls"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="controlsPanel"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0668896
margin/top = 0.147059
margin/right = 0.311037
margin/bottom = 0.215686
text = "Movement:\tWASD or Arrow Keys\nInteract: Left Click\nInventory: I"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="closeControlsButton" type="Button" parent="controlsPanel"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.819398
margin/top = 0.867647
margin/right = 0.976589
margin/bottom = 0.965686
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close"
flat = false

[node name="invMenu" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -0.0605469
margin/top = -0.0683333
margin/right = -0.0605469
margin/bottom = -0.0683333
script/script = ExtResource( 6 )

[node name="itemOne" type="ItemList" parent="invMenu"]

visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="sprite" type="TextureFrame" parent="invMenu/itemOne"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.075
margin/top = 0.075
margin/right = 0.925
margin/bottom = 0.925
expand = true
stretch_mode = 0

[node name="itemTwo" type="ItemList" parent="invMenu"]

visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 41.0
margin/top = 0.0
margin/right = 81.0
margin/bottom = 40.0

[node name="sprite" type="TextureFrame" parent="invMenu/itemTwo"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.075
margin/top = 0.075
margin/right = 0.925
margin/bottom = 0.925
expand = true
stretch_mode = 0

[node name="itemThree" type="ItemList" parent="invMenu"]

visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 40.0

[node name="sprite" type="TextureFrame" parent="invMenu/itemThree"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.075
margin/top = 0.075
margin/right = 0.925
margin/bottom = 0.925
expand = true
stretch_mode = 0

[node name="itemFour" type="ItemList" parent="invMenu"]

visibility/visible = false
visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 40.0
margin/bottom = 81.0

[node name="sprite" type="TextureFrame" parent="invMenu/itemFour"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.075
margin/top = 0.075
margin/right = 0.925
margin/bottom = 0.925
expand = true
stretch_mode = 0

[node name="itemFive" type="ItemList" parent="invMenu"]

visibility/visible = false
visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 41.0
margin/top = 41.0
margin/right = 81.0
margin/bottom = 81.0

[node name="sprite" type="TextureFrame" parent="invMenu/itemFive"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.075
margin/top = 0.075
margin/right = 0.925
margin/bottom = 0.925
expand = true
stretch_mode = 0

[node name="itemSix" type="ItemList" parent="invMenu"]

visibility/visible = false
visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 41.0
margin/right = 122.0
margin/bottom = 81.0

[node name="sprite" type="TextureFrame" parent="invMenu/itemSix"]

visibility/light_mask = 2
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.075
margin/top = 0.075
margin/right = 0.925
margin/bottom = 0.925
expand = true
stretch_mode = 0

[connection signal="pressed" from="gameMenu/resumeButton" to="gameMenu" method="_on_resumeButton_pressed"]

[connection signal="pressed" from="gameMenu/exitButton" to="gameMenu" method="_on_exitButton_pressed"]

[connection signal="pressed" from="gameMenu/controlsButton" to="gameMenu" method="_on_controlsButton_pressed"]

[connection signal="pressed" from="controlsPanel/closeControlsButton" to="gameMenu" method="_on_closeControlsButton_pressed"]


